--- a/src/app/components/formulario/formulario.component.css
+++ b/src/app/components/formulario/formulario.component.css
@@ -1,9 +1,11 @@
 input.ng-invalid.ng-touched,
+select.ng-invalid.ng-touched,
 textarea.ng-invalid.ng-touched {
   border: 1px solid tomato;
 }
 
 input.ng-valid.ng-touched,
+select.ng-valid.ng-touched,
 textarea.ng-valid.ng-touched {
   border: 1px solid lightseagreen;
 }
