--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,8 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
+        <li>
+          <a class="nav-link" [routerLink]="['/home']" routerLinkActive="active">Blog</a>
         </li>
         <li class="nav-item dropdown">
           <option class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -30,7 +30,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/new']">Add
+          <a class="nav-link" [routerLink]="['/new']" routerLinkActive="active">Add
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-plus" fill="currentColor"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -42,7 +42,18 @@
           </a>
         </li>
       </ul>
-
+      <div class="form-inline my-2 my-lg-0">
+        <input (input)="findSearch()" [(ngModel)]="search" class="form-control mr-sm-2" type="search"
+          placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-warning my-2 my-sm-0" type="submit" (click)="findSearch()"><svg width="1em"
+            height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
+            <path fill-rule="evenodd"
+              d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
+          </svg></button>
+      </div>
     </div>
   </nav>
 </header>
