--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -35,7 +35,7 @@
                   d="M4.646 8.354a.5.5 0 0 0 .708 0L8 5.707l2.646 2.647a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708z" />
                 <path fill-rule="evenodd" d="M8 11.5a.5.5 0 0 0 .5-.5V6a.5.5 0 0 0-1 0v5a.5.5 0 0 0 .5.5z" />
               </svg></a>
-            <button class="btn btn-sm btn-success" (click)="onEdit(post.id)">Editar</button>
+            <button class="btn btn-sm btn-success" (click)="onEdit(post.id)">Edit</button>
           </div>
         </div>
       </div>
