--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -50,17 +50,16 @@
       <div class="row">
         <label class="col-sm-2 col-form-label">City</label>
         <div class="col-sm-10">
-          <input type="text" name="location" class="form-control" placeholder="Indicate city address"
-            formControlName="location">
+          <select class="form-control" name="ciudad" formControlName="location">
+            <option value="">Select city address</option>
+            <option *ngFor="let city of arrLocations" [value]="city.location.toLowerCase()">{{ city.location }}
+          </select>
         </div>
       </div>
       <!-- Text 4 validations -->
       <small class="form-text text-danger error"
         *ngIf="addForm.controls.location.errors?.required && addForm.controls.location.touched">* This field is
         required.</small>
-      <small class="form-text text-danger error"
-        *ngIf="addForm.controls.location.errors?.maxlength && addForm.controls.location.touched">* Please enter a valid
-        city.</small>
     </div>
     <input [disabled]="!addForm.valid" type="submit" class="btn btn-warning btn-block" value="Submit">
   </form>
